fix: improve spacing again

--- a/packages/elements/src/styles/_TryIt.scss
+++ b/packages/elements/src/styles/_TryIt.scss
@@ -7,10 +7,26 @@
   }
 }
 
+
 .ParameterGrid {
   display: grid;
   grid-template-columns: fit-content(120px) 20px auto;
   align-items: center;
+  padding-bottom: 0;
+  margin-bottom: 16px;
+}
+
+.SendButtonHolder{
+  margin-top: 16px;
+  padding-top: 0;
+}
+
+.TryItPanel {
+  /* The content wrapper */
+  > :nth-child(2) {
+    /* This, along with the padding:0 margin: 16s above causes margin collapse to guarantee correct spacing around the panels & send button */
+    overflow: auto;
+  }
 }
 
 .OperationParametersContent {
@@ -20,8 +36,6 @@
 .TextRequestBody{
   max-height: 200px;
   overflow-y: auto;
-}
-
-.FormDataBody, .TextRequestBody{
   padding-bottom: 0;
+  margin-bottom: 16px;
 }
